package blackhole;

option java_package = "com.dp.blackhole.protocol.control";
option java_outer_classname = "MessagePB";

import "AppReg.proto";
import "AssignBroker.proto";
import "AppRoll.proto";
import "RecoveryRoll.proto";
import "ReadyBroker.proto";
import "RollID.proto";
import "Failure.proto";
import "NoAvailableNode.proto";
import "StreamID.proto";
import "ConfRes.proto";
import "DumpReply.proto";
import "RemoveConf.proto";
import "BrokerReg.proto";
import "DumpApp.proto";
import "ConsumerReg.proto";
import "AssignConsumer.proto";
import "OffsetCommit.proto";
import "TopicReport.proto";
import "Restart.proto";
import "QuitAndClean.proto";
import "RollClean.proto";
import "DumpConsumerGroup.proto";

message Message {
    enum MessageType {
        HEARTBEART = 1;
        APP_REG = 2;
        BROKER_REG = 3;
        ASSIGN_BROKER = 4;
        READY_BROKER = 5;
        APP_ROLL = 6;
        UPLOAD_ROLL = 7;
        UPLOAD_SUCCESS = 8;
        UPLOAD_FAIL = 9;
        RECOVERY_ROLL = 10;
        RECOVERY_SUCCESS = 11;
        RECOVERY_FAIL = 12;
        FAILURE = 13;
        NOAVAILABLENODE = 14;
        UNRECOVERABLE = 15;
        MANUAL_RECOVERY_ROLL =16;
        DUMPSTAT = 17;
        RETIRESTREAM = 18;
        CONF_REQ = 19;
        CONF_RES = 20;
        NOAVAILABLECONF = 21;
        DUMPCONF = 22;
        DUMPREPLY = 23;
        LISTAPPS = 24;
        REMOVE_CONF = 25;
        DUMP_APP = 26;
        CONSUMER_REG = 27;
        ASSIGN_CONSUMER = 28;
        OFFSET_COMMIT = 29;
        TOPICREPORT = 30;
        CONSUMERREGFAIL = 31;
        MAKR_UNRECOVERABLE = 32;
        LISTIDLE = 33;
        RESTART = 34;
        QUIT = 35;
        CLEAN = 36;
        ROLL_CLEAN = 37;
        DUMP_CONSUMER_GROUP = 38;
        LIST_CONSUMER_GROUP = 39;
    }

    required MessageType type = 1;
    optional AppReg appReg = 2;
    optional AssignBroker assignBroker = 3;
    optional AppRoll appRoll = 4;
    optional RecoveryRoll recoveryRoll = 5;
    optional ReadyBroker readyBroker = 6;
    optional RollID rollID = 7;
    optional Failure failure = 8;
    optional NoAvailableNode noAvailableNode = 9;
    optional StreamID streamId = 10;
    optional ConfRes confRes = 11;
    optional DumpReply dumpReply = 12;
    optional RemoveConf removeConf = 13;
    optional BrokerReg brokerReg =14;
    optional DumpApp dumpApp = 15;
    optional ConsumerReg consumerReg = 16;
    optional AssignConsumer assignConsumer = 17;
    optional OffsetCommit offsetCommit = 18;
    optional TopicReport topicReport = 19;
    optional Restart restart = 20;
    optional Quit quit = 21;
    optional Clean clean = 22;
    optional RollClean rollClean = 23;
    optional DumpConsumerGroup dumpConsumerGroup = 24;
}
