package blackhole;

option java_package = "com.dp.blackhole.common";
option java_outer_classname = "AssignCollectorPB";

message AssignCollector {
    required string app_name = 1;
    required string collector_server = 2;
}