package blackhole;

option java_package = "com.dp.blackhole.common.gen";
option java_outer_classname = "FailurePB";

message Failure {
  enum NodeType {
    APP_NODE = 1;
    COLLECTOR_NODE = 2;
  }

  required string app = 1;
  required NodeType type = 2;
  required string app_server = 3;
  required int64 failTs = 4;
}